--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,11 @@
     animation: spin 1s linear infinite;
 }
 
+.swiper {
+    width: 600px;
+    height: 300px;
+}
+
 @keyframes spin {
     from {
         transform: rotate(0deg);
